@@ -5,6 +5,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
     o makeGenomicState() no longer has the 'addChrPrefix' argument. It has been
         replaced by 'levelsStyle' to use GenomeInfoDb to set the naming style.
+    o 'chrnums' has been changed to 'chrs' in fullCoverage()
 
 CHANGES IN VERSION 0.0.59
 -------------------------
